--- a/entregaMocks/src/public/index.html
+++ b/entregaMocks/src/public/index.html
@@ -43,7 +43,8 @@
             <div id="listado" class="mt-5"></div>
         </div>
         <div class="col-md-4">
-            <div class="listaMensajes card" id="listaMensajes">
+            <h2 class="mb-2">Compresión de mensajes <span id="compresion"></span> %</h2>
+            <div class="listaMensajes card mt-3" id="listaMensajes">
 
             </div>
             <div class="formMensajes mt-3">
@@ -64,6 +65,7 @@
         </div>
     </div>
 </div>    
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@faker-js/faker/+esm"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.2/dist/normalizr.browser.min.js"></script>
 <script src="main.js"></script>
 </body>
